--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://cdn.codewizardshq.com/9c5e922465679c1361b8714c5bc98c093058c240dc475da8b3b559f69d50ad15.jpg");
+  background-image: url("bgq.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   padding: 40px;
