--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body {
   font-family: "Roboto", sans-serif;
   text-align: center;
   overflow: hidden;
-  cursor: url("https://cdn.codewizardshq.com/5f9f16082c93bcabd74929673d539c903df9b3e7f80bba1162106274ca4bd01d.png"), auto;
+  cursor: url("harq.png"), auto;
 }
 
 h1 {
