--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,12 +1,12 @@
 body {
-  background-image: url('https://cdn.codewizardshq.com/9c5e922465679c1361b8714c5bc98c093058c240dc475da8b3b559f69d50ad15.jpg');
+  background-image: url('bgq.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   padding: 40px;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   overflow: hidden;
-  cursor: url('https://cdn.codewizardshq.com/5f9f16082c93bcabd74929673d539c903df9b3e7f80bba1162106274ca4bd01d.png'), auto;
+  cursor: url('harq.png'), auto;
 }
 
 h1 {
@@ -67,4 +67,5 @@ p {
 }
 .time {
   font-family: oswald;
+
 }
