--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,8 +5,8 @@ body {
   padding: 40px;
   font-family: "Roboto", sans-serif;
   text-align: center;
+  overflow: hidden;
   cursor: url("harq.png"), auto;
-  height: 100vh;
 }
 
 h1 {
